--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
 name: ci
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [ master, main ]
 permissions:
   contents: write
 jobs:
@@ -11,19 +9,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: '3.x'
+
+      # (optional) cache mkdocs' build cache
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
-          restore-keys: |
-            mkdocs-material-
-      - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force
+          restore-keys: mkdocs-material-
+
+      - name: Install MkDocs deps
+        run: |
+          pip install --upgrade pip
+          pip install mkdocs-material mkdocs-glightbox pymdown-extensions
+
+      - name: Deploy
+        run: mkdocs gh-deploy --force
