--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,10 +36,10 @@ plugins:
   - search
   - glightbox
 
-#extra:
-  #analytics:
-  #  provider: google
-   # property: G-F7SLJK3YKK
+extra:
+  analytics:
+    provider: google
+    property: G-F7SLJK3YKK
 
  
 nav:
